--- a/about.css
+++ b/about.css
@@ -51,6 +51,7 @@
   padding: 0 !important;
   margin: 0 !important;
   scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
   overflow-y: scroll;
   height: 100vh;
 }
