--- a/about.css
+++ b/about.css
@@ -46,6 +46,7 @@
   justify-content: center;
   align-items: center;
   scroll-snap-align: start;
+  scroll-behavior: smooth;
 }
 .page-container {
   padding: 0 !important;
